syntax = "proto3";

package go.micro.srv.passport;

service Passport {
	rpc Sms(Request) returns (Response) {}
	rpc SmsLogin(SmsLoginRequest) returns (SmsLoginResponse) {}
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc OAuthLogin(OAuthLoginRequest) returns (OAuthLoginResponse) {}
	rpc ValidateToken(TokenRequest) returns (TokenResponse) {}
	rpc SetPwd(SetPwdRequest) returns (SetPwdResponse) {}
}

message TokenInfo {
	int64 user_id = 1;
	string token = 2;
	string refresh_token = 3;
	int64 expired_at = 4;
}

message Request {
	string mobile = 1;
}

message Response {
	string code = 1;
}

message SmsLoginRequest {
	string mobile = 1;
	string code = 2;
}

message SmsLoginResponse {
	TokenInfo token_info = 1;
}

message LoginRequest {
	string mobile = 1;
	string passwd = 2;
}

message LoginResponse {
	TokenInfo token_info = 1;
}

message OAuthLoginRequest {
	string platform = 1;
	string code = 2;
}

message OAuthLoginResponse {
	TokenInfo token_info = 1;
}

message TokenRequest {
}

message TokenResponse {
}

message SetPwdRequest{
	string passwd = 1;
}

message SetPwdResponse{
	TokenInfo token_info = 1;
}
